--- a/src/com/ui/MyBook.form
+++ b/src/com/ui/MyBook.form
@@ -110,7 +110,13 @@
         <Component class="javax.swing.JComboBox" name="cboColumn">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
+              <StringArray count="5">
+                <StringItem index="0" value="Book ID"/>
+                <StringItem index="1" value="Book Title"/>
+                <StringItem index="2" value="Publishers Name"/>
+                <StringItem index="3" value="Author Name"/>
+                <StringItem index="4" value="Notes"/>
+              </StringArray>
             </Property>
           </Properties>
           <AuxValues>
